feat(next): upgrade to next 11 (WIP)

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,3 +4,4 @@
 @include carbon--font-face-sans();
 
 @import "~@carbon/ibmdotcom-styles/scss/components/dotcom-shell/dotcom-shell";
+@import "./landing";
